@@ -1,3 +1,11 @@
+2008-08-08  Ryan Lortie  <desrt@desrt.ca>
+
+	Bug 546876 - Modify GMarkup parser to accept &#x1; .. &#x1f;
+
+	* glib/gmarkup.c: previously the parser only accepted character
+	references for \t \n and \r (as per XML 1.0); now it accepts all
+	of &#x1; .. &#x1f;.
+
 2008-08-07  Tor Lillqvist  <tml@novell.com>
 
 	* configure.in: Output comment clarifying GPid semantics to
